--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     bankCode
   };
 
-  fetch("YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL", {
+  fetch("https://script.google.com/macros/s/AKfycbyTwaDgxykIUKmowTNwIqap09RmHpKaPF4lcd1pKeoOd3RzH_ZCM-6IMzqoXQmw1ME/exec", {
     method: "POST",
     body: JSON.stringify(data)
   })
