--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <thead>
       <tr>
         <th>Equity</th>
-        <th>Price</th>
+        <th>Price(FCC)</th>
         <th>Your Holdings</th>
         <th>Buy</th>
         <th>Sell</th>
