--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         tr.innerHTML = `
           <td>${eq.name}</td>
-          <td>FCC${eq.price}</td>
+          <td>${eq.price}</td>
           <td>${holdingsMap[eq.name] || 0}</td>
           <td>
             <button class="btn buy" onclick="trade('${eq.name}', 50, 'Buy')">Buy 50</button>
